# awsomequiz

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dev.ps1  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
app/: auth.py  cookies.py  db.py  queries.py  session.py  styles.py  theme.py
app/components/: runner.py
app/cookie_reader/: index.html
data/: glossary.json
docker/: Dockerfile
docs/: BRIEF.md  REVIEW_2026-05-28.md  how_to_run.md  playwright_audit.md
dumps/: CLF-C02.db  DVA-02.db
pages/: account.py  bookmarks.py  flashcards.py  glossary.py  guest_practice.py  home.py  login.py  practice.py  reset_password.py  review.py  session_detail.py  stats.py  timed_exam.py
questions/: aws_framework.csv  aws_service.csv  basic.csv
scripts/: _batch10_billing.json  _batch11_migration.json  _batch12_concepts.json  _batch13_canon.json  _batch1_compute.json  _batch2_storage.json  _batch3_database.json  _batch4_networking.json  _batch5_security.json  _batch6_devtools.json  _batch7_management.json  _batch8_appintegration.json  _batch9_analytics.json  _classify_clf_questions.py  _classify_dva_questions.py  _extract_glossary_candidates.py  _glossary_gap_report.py  _glossary_merge.py  load_flashcards.py  migrate_sqlite_to_supabase.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_schema.sql  0002_policies.sql  0003_session_questions.sql  0004_stats_handle_updates.sql  0005_flashcards.sql  0006_anon_read_reference.sql  0007_more_certifications.sql  0008_cert_code_fixes.sql  0009_dva_domains.sql  0010_report_question_rpc.sql  0011_theme_preference.sql
tests/: conftest.py  test_glossary.py  test_imports.py  test_queries.py  test_session.py
